// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiCombobox renders 1`] = `
.pounce-6 {
  position: relative;
}

.pounce-4 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3e516b;
}

.pounce-4:hover {
  border-color: #0081c5;
}

.pounce-4:focus-within {
  border-color: #0081c5;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-1 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-0 {
  vertical-align: top;
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #f6f6f6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-3 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(0, 14px) scale(1);
  -moz-transform: translate(0, 14px) scale(1);
  -ms-transform: translate(0, 14px) scale(1);
  transform: translate(0, 14px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 400;
}

.pounce-5 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  color: currentColor;
  position: absolute;
  pointer-events: none;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  right: 16px;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="pounce-6"
    role="combobox"
  >
    <div
      class="pounce-6"
    >
      <div
        aria-disabled="false"
        class="pounce-4"
      >
        <ul
          class="pounce-2"
        >
          <li
            class="pounce-1"
          >
            <input
              aria-autocomplete="list"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-0-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-0"
              id="downshift-0-input"
              placeholder="Select manufacturers"
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-3"
          for="downshift-0-input"
          id="downshift-0-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <svg
        class="pounce-5"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10L12 15L17 10H7Z"
        />
      </svg>
    </div>
    <ul
      aria-labelledby="downshift-0-label"
      class="pounce-7"
      id="downshift-0-menu"
      role="listbox"
    />
  </div>
</div>
`;

exports[`MultiCombobox renders with clear all option 1`] = `
.pounce-9 {
  position: relative;
}

.pounce-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-4 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-3 {
  vertical-align: top;
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #f6f6f6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-3::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-3:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-3:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-3:focus::placeholder {
  opacity: 0.4;
}

.pounce-3:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-8 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  color: currentColor;
  position: absolute;
  pointer-events: none;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  right: 16px;
}

.pounce-7 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: #23344e;
  border-radius: 4px;
  border-color: #23344e;
}

.pounce-7:hover {
  border-color: #0081c5;
}

.pounce-7:focus-within {
  border-color: #0081c5;
}

.pounce-7:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-6 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-19 {
  margin-top: -3px;
  border: 1px solid;
  border-left-color: #0081c5;
  border-right-color: #0081c5;
  border-bottom-color: #0081c5;
  border-top-color: #23344e;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  background-color: #3e516b;
  z-index: 10;
  position: absolute;
  width: 100%;
  max-height: 300px;
  overflow: auto;
}

.pounce-12 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #3e516b;
}

.pounce-12[aria-selected=true],
[data-selected]>.pounce-12 {
  background-color: #23344e;
}

.pounce-12::after {
  content: url( 'data:image/svg+xml; utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 20 18" fill="white"><path d="M7 14.17L2.83 10l-1.41 1.41L7 17 19 5l-1.41-1.42L7 14.17z" /></svg>' );
  display: none;
  position: absolute;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-content;
  height: fit-content;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

.pounce-2 {
  background-color: #0081c5;
  border-radius: 40px;
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 0.75rem;
  font-weight: 500;
  z-index: 1;
  margin: 4px;
}

.pounce-1 {
  margin-left: 8px;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-0 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 12px;
  height: 12px;
  color: currentColor;
}

.pounce-11 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #1d2a3f;
}

.pounce-11[aria-selected=true],
[data-selected]>.pounce-11 {
  background-color: #23344e;
}

.pounce-11::after {
  content: url( 'data:image/svg+xml; utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 20 18" fill="white"><path d="M7 14.17L2.83 10l-1.41 1.41L7 17 19 5l-1.41-1.42L7 14.17z" /></svg>' );
  display: block;
  position: absolute;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-content;
  height: fit-content;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    class="pounce-9"
    role="combobox"
  >
    <div
      class="pounce-9"
    >
      <div
        aria-disabled="false"
        class="pounce-7"
      >
        <ul
          class="pounce-5"
        >
          <li
            class="pounce-2"
            role="tag"
          >
            Toyota
            <button
              aria-label="Remove"
              class="pounce-1"
              type="button"
            >
              <svg
                class="pounce-0"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                />
              </svg>
            </button>
          </li>
          <li
            class="pounce-4"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-2-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-3"
              id="downshift-2-input"
              placeholder=""
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-6"
          for="downshift-2-input"
          id="downshift-2-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <svg
        class="pounce-8"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 14L12 9L17 14H7Z"
        />
      </svg>
    </div>
    <ul
      aria-labelledby="downshift-2-label"
      class="pounce-10"
      id="downshift-2-menu"
      role="listbox"
    />
    <ul
      aria-labelledby="downshift-2-label"
      class="pounce-19"
      id="downshift-2-menu"
      role="listbox"
      style="transform: scale(1, 1); opacity: 1;"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-11"
        id="downshift-2-item-0"
        role="option"
      >
        Toyota
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-1"
        role="option"
      >
        Ford
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-2"
        role="option"
      >
        Chevrolet
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-3"
        role="option"
      >
        BMW
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-4"
        role="option"
      >
        Mercedes
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-5"
        role="option"
      >
        Hammer
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-6"
        role="option"
      >
        Dodge
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-12"
        id="downshift-2-item-7"
        role="option"
      >
        Audi
      </li>
    </ul>
  </div>
</div>
`;

exports[`MultiCombobox renders with clear all option 2`] = `
.pounce-13 {
  position: relative;
}

.pounce-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-7 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-6 {
  vertical-align: top;
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #f6f6f6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-6::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-6:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-6:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-6:focus::placeholder {
  opacity: 0.4;
}

.pounce-6:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-12 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  color: currentColor;
  position: absolute;
  pointer-events: none;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  right: 16px;
}

.pounce-11 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: #23344e;
  border-radius: 4px;
  border-color: #23344e;
}

.pounce-11:hover {
  border-color: #0081c5;
}

.pounce-11:focus-within {
  border-color: #0081c5;
}

.pounce-11:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-10 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-23 {
  margin-top: -3px;
  border: 1px solid;
  border-left-color: #0081c5;
  border-right-color: #0081c5;
  border-bottom-color: #0081c5;
  border-top-color: #23344e;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  background-color: #3e516b;
  z-index: 10;
  position: absolute;
  width: 100%;
  max-height: 300px;
  overflow: auto;
}

.pounce-17 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #3e516b;
}

.pounce-17[aria-selected=true],
[data-selected]>.pounce-17 {
  background-color: #23344e;
}

.pounce-17::after {
  content: url( 'data:image/svg+xml; utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 20 18" fill="white"><path d="M7 14.17L2.83 10l-1.41 1.41L7 17 19 5l-1.41-1.42L7 14.17z" /></svg>' );
  display: none;
  position: absolute;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-content;
  height: fit-content;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

.pounce-2 {
  background-color: #0081c5;
  border-radius: 40px;
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 0.75rem;
  font-weight: 500;
  z-index: 1;
  margin: 4px;
}

.pounce-1 {
  margin-left: 8px;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-0 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 12px;
  height: 12px;
  color: currentColor;
}

.pounce-15 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #1d2a3f;
}

.pounce-15[aria-selected=true],
[data-selected]>.pounce-15 {
  background-color: #23344e;
}

.pounce-15::after {
  content: url( 'data:image/svg+xml; utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 20 18" fill="white"><path d="M7 14.17L2.83 10l-1.41 1.41L7 17 19 5l-1.41-1.42L7 14.17z" /></svg>' );
  display: block;
  position: absolute;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-content;
  height: fit-content;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

.pounce-9 {
  color: #35c6ab;
  z-index: 2;
  position: absolute;
  bottom: 0;
  right: 18px;
  margin-bottom: 4px;
  font-style: italic;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 0.75rem;
  cursor: pointer;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    class="pounce-13"
    role="combobox"
  >
    <div
      class="pounce-13"
    >
      <div
        aria-disabled="false"
        class="pounce-11"
      >
        <ul
          class="pounce-8"
        >
          <li
            class="pounce-2"
            role="tag"
          >
            Toyota
            <button
              aria-label="Remove"
              class="pounce-1"
              type="button"
            >
              <svg
                class="pounce-0"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                />
              </svg>
            </button>
          </li>
          <li
            class="pounce-2"
            role="tag"
          >
            Ford
            <button
              aria-label="Remove"
              class="pounce-1"
              type="button"
            >
              <svg
                class="pounce-0"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                />
              </svg>
            </button>
          </li>
          <li
            class="pounce-7"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-2-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-6"
              id="downshift-2-input"
              placeholder=""
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <button
          class="pounce-9"
          type="button"
        >
          Clear all
        </button>
        <label
          class="pounce-10"
          for="downshift-2-input"
          id="downshift-2-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <svg
        class="pounce-12"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 14L12 9L17 14H7Z"
        />
      </svg>
    </div>
    <ul
      aria-labelledby="downshift-2-label"
      class="pounce-14"
      id="downshift-2-menu"
      role="listbox"
    />
    <ul
      aria-labelledby="downshift-2-label"
      class="pounce-23"
      id="downshift-2-menu"
      role="listbox"
      style="transform: scale(1, 1); opacity: 1;"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-15"
        id="downshift-2-item-0"
        role="option"
      >
        Toyota
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-15"
        id="downshift-2-item-1"
        role="option"
      >
        Ford
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-17"
        id="downshift-2-item-2"
        role="option"
      >
        Chevrolet
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-17"
        id="downshift-2-item-3"
        role="option"
      >
        BMW
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-17"
        id="downshift-2-item-4"
        role="option"
      >
        Mercedes
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-17"
        id="downshift-2-item-5"
        role="option"
      >
        Hammer
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-17"
        id="downshift-2-item-6"
        role="option"
      >
        Dodge
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="pounce-17"
        id="downshift-2-item-7"
        role="option"
      >
        Audi
      </li>
    </ul>
  </div>
</div>
`;

exports[`MultiCombobox renders with variant="solid" 1`] = `
.pounce-6 {
  position: relative;
}

.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-1 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-0 {
  vertical-align: top;
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #f6f6f6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-3 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(0, 14px) scale(1);
  -moz-transform: translate(0, 14px) scale(1);
  -ms-transform: translate(0, 14px) scale(1);
  transform: translate(0, 14px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 400;
}

.pounce-5 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  color: currentColor;
  position: absolute;
  pointer-events: none;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  right: 16px;
}

.pounce-4 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: #23344e;
  border-radius: 4px;
  border-color: #23344e;
}

.pounce-4:hover {
  border-color: #0081c5;
}

.pounce-4:focus-within {
  border-color: #0081c5;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="pounce-6"
    role="combobox"
  >
    <div
      class="pounce-6"
    >
      <div
        aria-disabled="false"
        class="pounce-4"
      >
        <ul
          class="pounce-2"
        >
          <li
            class="pounce-1"
          >
            <input
              aria-autocomplete="list"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-1-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-0"
              id="downshift-1-input"
              placeholder="Select manufacturers"
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-3"
          for="downshift-1-input"
          id="downshift-1-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <svg
        class="pounce-5"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10L12 15L17 10H7Z"
        />
      </svg>
    </div>
    <ul
      aria-labelledby="downshift-1-label"
      class="pounce-7"
      id="downshift-1-menu"
      role="listbox"
    />
  </div>
</div>
`;
